--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
     "license": "proprietary",
     "type": "project",
     "autoload": {
-        "psr-4": {
-            "AppBundle\\": "src/AppBundle"
-        },
+        "psr-4": { "": "src/" },
         "classmap": [
             "app/AppKernel.php",
             "app/AppCache.php"
