--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: php
 php:
   - 7.1.2
+service:
+  - mysql
 before_script:
   - composer install
   - composer require guzzlehttp/guzzle
+  - echo -e "[server]\nwait_timeout=28800" | sudo tee -a /etc/mysql/my.cnf
+  - sudo service mysql restart
+  - mysql -e "CREATE DATABASE IF NOT EXISTS city_weather;"
+  - mysql -e "CREATE TABLE city (id INT, city VARCHAR(100));
