--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - echo -e "[server]\nwait_timeout=28800" | sudo tee -a /etc/mysql/my.cnf
   - sudo service mysql restart
   - mysql -e "CREATE DATABASE IF NOT EXISTS symfony;"
-  - mysql -e use symfony;
-  - mysql -e "CREATE TABLE city (id INT, city VARCHAR(100))";
+  - mysql -e "use symfony";
+  - mysql -e "CREATE TABLE city (id INT, city VARCHAR(100));"
