--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,14 +41,25 @@ twig:
 
 # Doctrine Configuration
 doctrine:
+    
     dbal:
-        driver: pdo_mysql
-        host: '%database_host%'
-        port: '%database_port%'
-        dbname: '%database_name%'
-        user: '%database_user%'
-        password: '%database_password%'
-        charset: UTF8
+        default_connection: mysql
+        connections:
+            mysql:
+                driver: 'pdo_mysql'
+                host: '%database_host%'
+                port: '%database_port%'
+                dbname: '%database_name%'
+                user: '%database_user%'
+                password: '%database_password%'
+                charset:  UTF8
+        # driver: pdo_mysql
+        # host: '%database_host%'
+        # port: '%database_port%'
+        # dbname: '%database_name%'
+        # user: '%database_user%'
+        # password: '%database_password%'
+        # charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: '%kernel.project_dir%/var/data/data.sqlite'
@@ -57,9 +68,13 @@ doctrine:
         #path: '%database_path%'
 
     orm:
-        auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        default_entity_manager: default
+        entity_managers:
+            default:
+                connection: mysql
+                mappings:
+                    AppBundle: ~
+                    WeatherBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
