--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,5 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    # arguments:
+    #     - "@doctrine.orm.default"
