--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,7 +4,7 @@ parameters:
     database_port: 3306
     database_name: city_weather
     database_user: root
-    database_password:
+    database_password: 12345
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
